Refactor DTOs and mappers to use UUIDs for IDs; update CruiseDto, PortDto, and SailboatDto to improve type safety and consistency across the application.